fix: remove unnecessary game scrollbar

--- a/styles/game.module.scss
+++ b/styles/game.module.scss
@@ -8,6 +8,9 @@
   height: 100vh;
   font-family: Fipps;
   text-align: center;
+  canvas {
+    display: block;
+  }
 }
 
 .loading {
